<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbdbdb"
    android:orientation="horizontal"
    android:padding="16dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/image_view"
        style="@style/ProductListItemImageProduct" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            style="@style/ProductListItemNameProduct"
            android:text="@string/adobo" />

        <TextView
            android:id="@+id/price"
            style="@style/ProductListItemPriceProduct"
            android:text="@string/_10" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAvailabilityListItem"
                android:text="@string/availability" />

            <TextView
                android:id="@+id/quantity"
                style="@style/ListItemQuantity"
                android:text="@string/_15" />
        </LinearLayout>


        <ImageView
            android:id="@+id/buy"
            style="@style/ListItemBuyIconTheme"
            android:src="@drawable/add_to_cart" />

    </LinearLayout>

</LinearLayout>
